---------
0.?.?
---------
- Fix auto-assigned IDs overlapping when adding vehicles.
- Add `Mask`, `FileMask` and `ImageMask` classes to define sprite masks.
- Add `mode` argument to `Mask` with option to overdraw sprite.
- Add `ShipFlags` enum.
- Add support for the extended format in Action1.
- lib: Fix `CallbackManager.make_switches` for non-vehicle features.
- lib: `CallbackManager` rewrite:
	- Support all features (non-vehicles may still be incomplete).
	- Make `CallbackManager` abstract class, use `make_callback_manager` function instead.
	- Support splitting callbacks for default and purchase branch with `DualCallback`.
	- Use `graphics.purchase` instead of `purchase_graphics` attribute.
- lib: Add `Ship.Flags` and `RoadVehicle.Flags` for unified access to flags.
- lib: Add `EngineOverride` sprite generator.
- lib: Set correct flags and track_type on auto-articulated parts.

---------
0.2.2
---------

- Change license to GPL v2+ (same as nml) instead of v3 to allow reusing v2 code/resources.
- Fix graphics sprite composition.
- Fix Train weight Action 0 properties (low and high bytes).
- Fix compilation of generic var parameter in Action 2.
- Fix `var(...)` call in `Switch` code not accepting `param` value without parentheses.
- Fix default purchase sprite for auto-articulated trains.

- Rename `speed` Action 0 property for ships to `max_speed` for consinstency with other vehile types.
- Rename Action 0 ship properties to match nml:
	- `cargo_type` to `default_cargo_type`
	- `sound` to `sound_effect`
	- `ocean_speed` to `ocean_speed_fraction`
	- `canal_speed` to `canal_speed_fraction`
	- `flags` to `misc_flags`
	- `refit_classes` to `refittable_cargo_classes`
	- `non_refit_classes` to `non_refittable_cargo_classes`
- Add `id_map_file` parameter to `BaseNewGRF` constructor and `reserve_ids` and `resolve_id` methods to manage auto-assigned (string) IDs.
- Use `AlternativeSprites` instead of sprite tuples.
- Add Action0 properties for road types.