@@ -6,6 +6,7 @@
 - Add `mode` argument to `Mask` with option to overdraw sprite.
 - Add `ShipFlags` enum.
 - Add support for the extended format in Action1.
+- Add `main` function to handle command line arguments.
 - lib: Fix `CallbackManager.make_switches` for non-vehicle features.
 - lib: `CallbackManager` rewrite:
 	- Support all features (non-vehicles may still be incomplete).
